<resources>
    <string name="app_name">ASMR Contestant Table</string>

    <!-- Content Description -->
    <string name="content_description_no_contestants_found_illustration">No contestants found illustration</string>
    <string name="content_description_add_contestant">Add contestant button</string>
    <string name="content_description_add_week_highlights">Add Week Highlights button</string>
    <string name="content_description_no_week_highlights_found_illustration">No Week Highlights found illustration</string>
    <string name="content_description_week_highlights">Highlights of the Week icon</string>
    <string name="content_description_increment_number_of_times_slept">Increment number of times slept</string>
    <string name="content_description_increment_number_os_times_you_did_not_slept">Increment number os times you did not slept</string>
    <string name="content_description_increment_number_of_time_you_felt_tired">Increment number of times you felt tired</string>
    <string name="content_description_bottom_sheet_slider">Slider to close the dialog</string>
    <string name="content_description_add_profile_picture">Add profile picture, illustration</string>

    <!-- Common -->
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="contestants_table">Contestants table</string>
    <string name="week_highlights">Week highlights</string>
    <string name="reset_contest">Reset contest</string>
    <string name="contest_details">Contest details</string>
    <string name="click_on_the_add_button_to_start_registering">Click on the \"Add\" button to start registering.</string>

    <!-- Contestants list screen -->
    <string name="no_contestants_found">No contestants found</string>
    <string name="cell_acronym_position">POS</string>
    <string name="cell_acronym_points">PTS</string>
    <string name="cell_acronym_felt_tired">FT</string>
    <string name="cell_acronym_did_not_slept">DNS</string>
    <string name="cell_acronym_slept">S</string>

    <!-- Week highlights list screen -->
    <string name="no_week_highlights_found">No Week Highlights found</string>

    <!-- Add contestant dialog -->
    <string name="add_contestant">Add contestant</string>
    <string name="adding_contestant">Adding contestant…</string>
    <string name="please_enter_contestant_name">Please enter the contestant\'s name</string>

    <!-- Add Week Highlights dialog -->
    <string name="add_week_highlights">Add week highlight</string>
    <string name="first_contestant">First contestant</string>
    <string name="second_contestant">Second contestant</string>
    <string name="adding_week_highlights">Adding Week Highlights…</string>

    <!-- Contestant details dialog -->
    <string name="statistics">Statistics</string>
    <string name="contestant_times_slept">Times slept: %d</string>
    <string name="contestant_times_did_not_slept">Times did not slept: %d</string>
    <string name="contestant_times_felt_tired">Times felt tired: %d</string>

    <!-- Reset Contest Dialog -->
    <string name="dialog_title_reset_contest">Reset contest</string>

    <!-- Dialog messages -->
    <string name="dialog_message_reset_contest">Are you sure? Resetting the contest will delete all contestants and week highlights.</string>

    <!-- Dialog button -->
    <string name="dialog_negative_button_cancel">Cancel</string>
    <string name="dialog_positive_button_reset">Reset</string>

    <!-- Messages -->
    <string name="message_contest_rebooted_successfully">Contest rebooted successfully</string>
    <string name="message_unexpected_error_occurred">Unexpected error occurred. Please try again.</string>
    <string name="message_read_external_storage_permission_denied">Please grant access to external storage to use this feature</string>
    <string name="message_read_external_storage_permission_denied_permanently">Please access your device\'s settings and grant access to external storage to use this feature</string>

    <!-- Week highlights list item -->
    <string name="week_highlights_item_week_number">Week %d</string>
    <string name="week_highlights_item_contestants_names">%1$s &amp; %2$s</string>

</resources>