<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="@dimen/padding_16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_bottom_sheet_slider"
            android:layout_width="@dimen/bottom_sheet_slider_width"
            android:layout_height="@dimen/bottom_sheet_slider_height"
            android:layout_marginTop="@dimen/margin_8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_bottom_sheet_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_contestant_profile_picture"
            android:layout_width="@dimen/add_contestant_profile_picture_dimension"
            android:layout_height="@dimen/add_contestant_profile_picture_dimension"
            android:layout_marginTop="@dimen/margin_24dp"
            android:contentDescription="@string/content_description_add_profile_picture"
            android:src="@drawable/dr_contestant_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_bottom_sheet_slider" />

        <TextView
            android:id="@+id/text_view_add_contestant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceTitleLarge"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_contestant_profile_picture"
            tools:text="Contestant name"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/edit_text_contestant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_add_contestant_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_contestant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_contestant_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>