<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16dp">

    <ImageView
        android:id="@+id/image_view_contestant_details_slider"
        android:layout_width="@dimen/bottom_sheet_slider_width"
        android:layout_height="@dimen/bottom_sheet_slider_height"
        android:layout_marginTop="@dimen/margin_8dp"
        android:contentDescription="@string/content_description_bottom_sheet_slider"
        android:src="@drawable/ic_bottom_sheet_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_contestant_profile_picture"
        android:layout_width="@dimen/contestant_details_profile_picture_dimension"
        android:layout_height="@dimen/contestant_details_profile_picture_dimension"
        android:layout_marginTop="@dimen/margin_24dp"
        android:contentDescription="@string/content_description_add_profile_picture"
        android:src="@drawable/dr_contestant_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_contestant_details_slider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_contestants_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="@+id/view_contestant_details_divider"
        app:layout_constraintStart_toStartOf="@+id/view_contestant_details_divider"
        app:layout_constraintTop_toBottomOf="@+id/image_view_contestant_profile_picture"
        tools:text="Contestant name" />

    <View
        android:id="@+id/view_contestant_details_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/horizontal_divider_height"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:background="?dividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_contestants_details_name" />

    <TextView
        android:id="@+id/text_view_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/statistics"
        android:textAppearance="?textAppearanceBodySmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view_contestant_details_divider"
        app:layout_constraintTop_toBottomOf="@+id/view_contestant_details_divider" />

    <TextView
        android:id="@+id/text_view_times_slept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintStart_toStartOf="@+id/text_view_statistics"
        app:layout_constraintTop_toBottomOf="@+id/text_view_statistics"
        tools:text="Times slept: 0" />

    <ImageButton
        android:id="@+id/button_increment_times_slept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_times_slept"
        app:layout_constraintEnd_toEndOf="@+id/view_contestant_details_divider"
        app:layout_constraintTop_toTopOf="@+id/text_view_times_slept" />

    <TextView
        android:id="@+id/text_view_times_did_not_slept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintStart_toStartOf="@+id/text_view_statistics"
        app:layout_constraintTop_toBottomOf="@+id/text_view_times_slept"
        tools:text="Times did not slept: 0" />

    <ImageButton
        android:id="@+id/button_increment_times_did_not_slept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_times_did_not_slept"
        app:layout_constraintEnd_toEndOf="@+id/view_contestant_details_divider"
        app:layout_constraintTop_toTopOf="@+id/text_view_times_did_not_slept" />

    <TextView
        android:id="@+id/text_view_times_felt_tired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintStart_toStartOf="@+id/text_view_statistics"
        app:layout_constraintTop_toBottomOf="@+id/text_view_times_did_not_slept"
        tools:text="Times felt tired: 0" />

    <ImageButton
        android:id="@+id/button_increment_times_felt_tired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_times_felt_tired"
        app:layout_constraintEnd_toEndOf="@+id/view_contestant_details_divider"
        app:layout_constraintTop_toTopOf="@+id/text_view_times_felt_tired" />

</androidx.constraintlayout.widget.ConstraintLayout>